# KawAnime

./: .babelrc  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gitignore  .gitmodules  .travis.yml  CONTRIBUTORS.md  Features  LICENSE  README.md  appveyor.yml  collect-dylib-deps.sh  cypress.json  index.html  index.js  main.js  nightwatch.conf.js  nuxt.config.js  package-lock.json  package.json  publish.sh  renderer.js  vue.config.js
.github/workflows/: linux.yml  macos-10.15.yaml  macos-11.yaml  macos.yaml
app/: analytics.js  bin.js  config.js  index.js  process.js  server.js  style.css
app/Downloader/: downloader.js  index.html  remover.py
app/InformationPage/: index.html  informations.js  style.css
app/api/: generateEnv.js  index.js
app/api/config/: config.js  index.js  setupAccount.js
app/api/env/: index.js  isOnline.js  protocols.js  releaseNotes.js  updateReleaseVersion.js  win.js
app/api/history/: history.js
app/api/local/: index.js  local.js
app/api/mal/: index.js  official.js  scrap.js
app/api/news/: index.js  news.js
app/api/nyaa/: download.js  engines.js  getLatest.js  index.js
app/api/openExternal/: index.js  openExternal.js
app/api/search/: episodes.js  index.js  search.js
app/api/seasons/: index.js  (+1 more)
app/electron/: events.js  index.html  index.js  runner.js
app/main/: index.js
app/web/: index.js
assets/: App.vue  app.js  index.template.html  main.css  menu.js  serverStart.js  vuetify.js
assets/api/: history.js  horrible.js  local.js  main.js  news.js  nyaa.js  search.js  seasons.js  watchList.js
assets/scripts/: dist.js  menu.js
assets/stylus/: electron.styl  functions.styl  global.styl  main.styl  material-icons.styl  scrollbar.styl  theme.styl  transitions.styl
bindings/: CMakeLists.txt  CPPLINT.cfg  example.js  index.js  package.json
bindings/name_parser/: CMakeLists.txt  index.js
bindings/name_parser/src/: addon.cc  bind.cc  bind.h  parse.cc  parse.h  wrapper.h
bindings/scripts/: install.sh  install_libtorrent.sh  install_ninja.sh
bindings/src/: addon.cc  win_delay_load_hook.cc
bindings/src/name_parser/: bind.cc  bind.h  parse.cc  parse.h  wrapper.cc  wrapper.h
bindings/src/torrent/: bind.cc  bind.h  client_session.cc  client_session.h  torrent.cc  torrent.h  utils.cc  utils.h  version.cc  version.h  win_ver.h  windows.h
bindings/torrent/: CMakeLists.txt  index.js
bindings/torrent/cmake/: FindLibtorrentRasterbar.cmake
bindings/torrent/src/: addon.cc  bind.cc  bind.h  client_session.cc  client_session.h  torrent.h  utils.h  version.cc  version.h
components/: _index.js  choiceWindow.vue  env.vue  episodesModal.vue  historyModal.vue  infoModal.vue  infoResults.vue  kFooter.vue  listEntry.vue  loader.vue  logs.vue  magnetsModal.vue  malForm.vue  news.vue  overlay.vue  playerSlider.vue  settings.vue  videoModal.vue  videoPlayer.vue
css/: app.styl  main.css  mdi.css
layouts/: default.vue
mixins/: dragDrop.js  meta.js
mixins/global/: dragDrop.js  overlay.js
mixins/subtitles/: checkOverlap.js  getStyle.js  index.js  timing.js
mixins/utils/: draggable.js
pages/: downloader.vue  index.vue  localPage.vue  malPage.vue  news.vue  nyaa.vue  releases.vue  seasons.vue  streaming.vue  torrenting.vue  watchList.vue
plugins/: vuetify.js
public/: index.html  libboost_system.dylib  manifest.json
resources/: initConfig.js
resources/tmp/: .keep_up
router/: index.js  meta.js
scripts/: afterBuild.js  moveLibs.js  postinstall.js
server/: generateEnv.js  history.js  horrible.js  index.js  local.js  news.js  nyaa.js  openExternal.js  search.js  seasons.js  updater.js  watchList.js
server/env/: env.js  index.js  isOnline.js  releaseNotes.js  updateReleaseVersion.js  win.js
server/history/: history.js
server/local/: index.js  local.js
server/mal/: index.js  official.js  scrap.js
server/news/: news.js
server/nyaa/: download.js  getLatest.js
server/openExternal/: openExternal.js
server/search/: episodes.js  index.js
server/seasons/: seasons.js
server/torrent/: index.js  torrent.js
server/updater/: index.js
server/utils/: dir.js  index.js  removeUnwanted.js
server/vault/: index.js
server/video/: index.js  local.js  streaming.js
server/watchList/: index.js  watchList.js
src/: App.vue  main.js  menu.js  navigationBar.js  renderer.js  router.js  style.css
src/Downloader/: index.html  style.css
src/InformationPage/: index.html  style.css
src/assets/: vuetify.js
src/background/: events.js  index.js
src/downloader/: functions.js  index.js
src/infoPage/: functions.js  index.js
src/loader/: index.js
src/localPage/: functions.js  index.js
src/main/: events.js  index.js  menu.js
src/news/: functions.js  index.js
src/pages/: index.js  localPage.vue  news.vue  seasons.vue  services.vue  watchList.vue
src/preferences/: functions.js  index.html  index.js  style.css
src/releases/: functions.js  index.js
src/renderer/: App.vue  main.js
src/seasonInfo/: functions.js  index.html  index.js
src/store/: actions.js  index.js  mutations.js  state.js  utils.js
src/stylus/: global.styl  main.styl  scrollbar.styl
src/watchList/: functions.js  index.js
src/watcher/: watcher.js
static/: sitemap.xml
static/sounds/: Nico Nico Nii.m4a  Nyanpasu.m4a
store/: actions.js  getters.js  index.js  mutations.js  state.js  utils.js
store/modules/: index.js  lists.js
test/: .nycrc  clean.js  electron.spec.js  front.test.js  hooks.js  index.spec.js  mocha.js  nuxt.test.js  server.test.js
test/api/: config.test.js  env.test.js  history.test.js  index.test.js  local.test.js  mal.test.js  news.test.js  nyaa.test.js  search.test.js  seasons.test.js  torrent.test.js  utils.js  vault.test.js  watchList.test.js
test/app/: downloader.spec.js  feed.spec.js  index.js  search.spec.js  toolbar.spec.js
test/bindings/: index.js
test/container/: index.js  window.spec.js
test/nightwatch/: main.js  main.test.js
tests/unit/: electron.spec.js
webpack/: setup-dev-server.js  vue-loader.config.js  webpack.base.config.js  webpack.client.config.js  webpack.server.config.js
(+665 files in other folders)
